# Decision-trees_CART_sketch

./: .coverage 2  .flake8  .gitignore  EXAMPLES.md  FEATURE_ENGINEERING_REMOVAL.md  LICENSE  PRUNING_GUIDE.md  PRUNING_QUICK_REF.md  README.md  STRUCTURE.md  create_mushroom_sketch_files.py  demo_advanced_classification.sh  demo_advanced_strategies.py  demo_feature_subsampling.py  du_pipeline.sh  generate_mushroom_baselines.py  json_tree.json  make_rules_from_tree.sh  mushroom_baseline_outputs.json  pipeline_2col_to_model.sh  pipeline_3col_to_model.sh  pyproject.toml  pytest-integration.ini  pytest-unit.ini  pytest.ini  requirements.txt  run_binary_classification.py  run_tree_comparison_with_logging.py  sample_du_training.sh  sample_end_2_end_training.sh  setup.py  test-unit.sh  test_CART_with_csv.py  test_CART_with_csv.sh  test_advanced_classifier.py  test_json_fix.py  test_mushroom.sh  test_mushroom_pruning.py  test_pruning_demo.py  test_record_mode.py
DU_output/: DU_feature_mapping.json  DU_raw_2col_sketches_lg_k_18.csv  quick_test_rules.txt  tree_rules.json  tree_validation_queries.sql
configs/: du_config.yaml  mushroom_config.yaml  mushroom_training_config.yaml
demo_output/: binomial_pvalue_config.yaml  business_scenarios.md  class_weightage_config.yaml  confidence_intervals_config.yaml  ratio_threshold_config.yaml  strategy_comparison.md  template_config.yaml
demo_rule_code/: DecisionRules.java  README.md  decision_rules.cpp  decision_rules.py
docs/: 01-quickstart.md  01_high_level_architecture.md  02-user-guide.md  02_low_level_design.md  03-architecture.md  03_algorithms.md  04-algorithms.md  04_data_formats.md  05-api-reference.md  05_api_design.md  06-performance.md  06_module_structure.md  07-testing.md  07_testing_strategy.md  08-troubleshooting.md  08_implementation_roadmap.md  09-data-formats.md  09_deployment_strategies.md  10-hyperparameter-tuning.md  10_hyperparameter_tuning_guide.md  11-deployment.md  CORRECTIONS.md  FINAL_TEST_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PRUNING_GUIDE.md  README.md  SKETCH_WORKFLOW_GUIDE.md  STATUS.md  TESTING.md  TREE_USAGE_GUIDE.md  performance_analysis.md  user_guide.md
examples/: 01_basic_usage.py  basic_usage.py  config_ctr_imbalanced.yaml
scripts/: run_binary_classification.py  test-all.sh  test-integration.sh  verify_env.sh
tests/: __init__.py  conftest.py  test_already_used_fix.py  test_binary_classification_sketches.py  test_both_modes.py  test_cache.py  test_classifier.py  test_classifier_utils.py  test_config_parser.py  test_coverage_boost.py  test_criteria.py  test_criteria_original.py  test_enhanced_mushroom_validation.py  test_feature_importance.py  test_feature_subsampling.py  test_integration.py  test_interfaces.py  test_metrics.py  test_missing_handler.py  test_mock_sketches.py  test_model_persistence.py  test_pruner.py  (+13 more)
(+76 files in other folders)
